Reestructurar la salida del motor en totales globales y por parada
